<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">application_1</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_100_kcal">100 kcal</string>
<string name="lbl_250_g">250 g</string>
<string name="lbl_es_vegano">¿Es vegano?</string>
<string name="lbl_960_1919">960 / 1919</string>
<string name="lbl_no">No</string>
<string name="lbl_s">Sí</string>
<string name="lbl_comenc_mos">Comencémos</string>
<string name="lbl_regresar">Regresar</string>
<string name="msg_1578_1929_kca">1578 - 1929 kcal</string>
<string name="lbl_bajar_peso">Bajar peso</string>
<string name="msg_alimentos_del_d">Alimentos del día</string>
<string name="lbl_app_navigation">App Navigation</string>
<string name="msg_2_paquetes_de_a">2 paquetes de alga nori</string>
<string name="lbl_mantener_peso">Mantener peso</string>
<string name="lbl_174_kcal">174 kcal</string>
<string name="lbl_crea_una_cuenta">Crea una cuenta</string>
<string name="msg_calor_as_para_m">Calorías para mantener mi peso</string>
<string name="lbl_38_167_g">38 / 167 g</string>
<string name="lbl_180_kcal">180 kcal</string>
<string name="lbl_resumen">Resumen</string>
<string name="msg_recetas_para_ca">Recetas para cada comida del día</string>
<string name="lbl_grasas">Grasas</string>
<string name="msg_nutrici_n_hecha">Nutrición hecha para ti</string>
<string name="lbl_sobre_ti">Sobre ti</string>
<string name="lbl_preview">Preview</string>
<string name="msg_conserva_tu_est">Conserva tu estado físico y saludable</string>
<string name="lbl_ensalada">Ensalada</string>
<string name="lbl_ganar_m_sculo">Ganar músculo</string>
<string name="msg_1_2_tazas_de_vi">1/2 tazas de vinagre de arroz</string>
<string name="lbl_start">Start</string>
<string name="msg_fecha_de_nacimi">Fecha de nacimiento</string>
<string name="lbl_needs_one">Needs_One</string>
<string name="msg_calor_as_objeti3">Calorías objetivo ~ 1929 kcal</string>
<string name="lbl_cenas">Cenas</string>
<string name="lbl_250_kcal">250 kcal</string>
<string name="msg_calor_as_objeti2">Calorías objetivo ~ 1929 kcal</string>
<string name="lbl_prote_nas">Proteínas</string>
<string name="lbl_ya_casi">Ya casi</string>
<string name="msg_nombre_de_usuar">Nombre de usuario</string>
<string name="lbl_inicia_sesi_n">Inicia sesión</string>
<string name="lbl_feed">Feed</string>
<string name="msg_no_tienes_cuen2">¿No tienes cuenta?</string>
<string name="msg_ya_tienes_cuen">¿Ya tienes cuenta? Inicia sesión</string>
<string name="msg_calor_as_objeti4">Calorías objetivo ~ 1929 kcal</string>
<string name="lbl_155_kcal">155 kcal</string>
<string name="lbl_pan_de_caja">Pan de caja</string>
<string name="lbl_needs_two">Needs_Two</string>
<string name="lbl_sopa_de_verdura">Sopa de verdura</string>
<string name="msg_no_tienes_cuen">¿No tienes cuenta? Regístrate</string>
<string name="msg_calor_as_actual">Calorías actuales</string>
<string name="lbl_iniciar_sesi_n">Iniciar sesión</string>
<string name="lbl_configuraci_n">Configuración</string>
<string name="msg_250_gramos_de_a">250 gramos de atún</string>
<string name="lbl_60_kg">60 kg.</string>
<string name="lbl_cerrar_sesi_n">Cerrar sesión</string>
<string name="msg_check_your_app">"Check your app's UI from the below demo screens of your app."</string>
<string name="lbl_avanzar">Avanzar</string>
<string name="lbl_user">User</string>
<string name="lbl_pollo">Pollo</string>
<string name="lbl_sexo">Sexo</string>
<string name="msg_30_gramos_de_sa">30 gramos de sal</string>
<string name="lbl_60_0_kg">60.0 kg</string>
<string name="lbl_200_g">200 g</string>
<string name="msg_descubre_un_pla">Descubre un plan diseñado para tus necesidades especifícas</string>
<string name="lbl_estofado">Estofado</string>
<string name="lbl_food_recipe">Food recipe</string>
<string name="lbl_crear_plan">Crear plan</string>
<string name="msg_continuar_con_g">Continuar con Google</string>
<string name="lbl_buscar">Buscar...</string>
<string name="msg_continuar_con_c">Continuar con correo</string>
<string name="lbl_needs_three">Needs_Three</string>
<string name="lbl_33_g">33 g</string>
<string name="msg_lunes_27_feb_2">Lunes 27, Feb 22</string>
<string name="lbl_nutrity_2022">Nutrity 2022</string>
<string name="lbl_1_vaso">1 vaso</string>
<string name="lbl_sushi">Sushi</string>
<string name="msg_incrementa_tu_m">Incrementa tu masa muscular</string>
<string name="lbl_91_kcal">91 kcal</string>
<string name="lbl_quinoa">Quinoa</string>
<string name="lbl_recipes">Recipes</string>
<string name="lbl_crear_cuenta">Crear cuenta</string>
<string name="lbl_960_1919_kcal">960 / 1919
kcal</string>
<string name="lbl_1_plato">1 plato</string>
<string name="lbl_terminar">Terminar</string>
<string name="lbl_bajar_de_peso">Bajar de peso</string>
<string name="lbl_mujer">Mujer</string>
<string name="lbl_recetas">Recetas</string>
<string name="lbl_calor_as">Calorías</string>
<string name="lbl_carbs">Carbs</string>
<string name="lbl_let_s_start">"Let\'s start"</string>
<string name="lbl_comidas">Comidas</string>
<string name="lbl_2339_kcal2">2339 kcal</string>
<string name="lbl_150_g">150 g</string>
<string name="msg_bienvenido_de">¡Bienvenido de vuelta!</string>
<string name="msg_60_gramos_de_az">60 gramos de azúcar</string>
<string name="lbl_kcal">kcal</string>
<string name="msg_olvid_mi_contr">Olvidé mi contraseña</string>
<string name="lbl">*********</string>
<string name="lbl_register">Register</string>
<string name="lbl_ingredientes">Ingredientes</string>
<string name="msg_ya_tienes_cuen2">¿Ya tienes cuenta?</string>
<string name="lbl_5_tazas_de_agua">5 tazas de agua</string>
<string name="lbl_peso_actual">Peso actual</string>
<string name="lbl_email">Email</string>
<string name="lbl_registrarse">Registrarse</string>
<string name="msg_pollo_a_la_plan">Pollo a la plancha</string>
<string name="lbl_carne_asada">Carne asada</string>
<string name="msg_maximiza_la_p_r">Maximiza la pérdida de grasa</string>
<string name="lbl_1919_kcal">1919 kcal</string>
<string name="lbl_leche">Leche</string>
<string name="lbl_peso_objetivo">Peso objetivo</string>
<string name="lbl_70_kg">70 kg.</string>
<string name="msg_correo_hotmail">correo@hotmail.com</string>
<string name="lbl_login">Login</string>
<string name="lbl_desayunos">Desayunos</string>
<string name="lbl_huevo">Huevo</string>
<string name="msg_altura_en_cent">Altura en centímetros</string>
<string name="lbl_hombre">Hombre</string>
<string name="lbl_2339_kcal">~ 2339 kcal</string>
<string name="lbl_2_unidades">2 unidades</string>
<string name="msg_contenido_nutri">Contenido nutriconal</string>
<string name="lbl_15_55_g">15 / 55 g</string>
<string name="msg_4_tazas_de_arro">4 tazas de arroz</string>
<string name="lbl_reg_strate">Regístrate</string>
<string name="lbl_75_g">75 g</string>
<string name="lbl_objetivo">Objetivo</string>
<string name="lbl_almuerzos">Almuerzos</string>
<string name="lbl_157_kcal">157 kcal</string>
<string name="lbl_perfil">Perfil</string>
<string name="msg_cu_l_es_tu_obj">¿Cuál es tu objetivo?</string>
<string name="lbl_ingresar">Ingresar</string>
<string name="msg_calor_as_objeti">Calorías objetivo</string>
<string name="lbl_contrase_a">Contraseña</string>
<string name="lbl_tu_informaci_n">Tu información</string>
<string name="lbl_27_122_g">27 / 122 g</string>
<string name="msg_this_contact_has_no_phone_nu">This contact has no phone number</string>
</resources>
