<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="configuraciNVM" type="com.application.app.modules.configuracin.data.viewmodel.ConfiguraciNVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearConfiguracin"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearRectangle3"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylegreen_500">
            <androidx.appcompat.widget.Toolbar android:gravity="start"
                android:id="@+id/toolbarToolbar"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_21pxv"
                android:layout_marginTop="@dimen/_21pxv"
                android:layout_width="match_parent" app:contentInsetStart="0dp">
                <LinearLayout android:id="@+id/linearGroup141"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_236pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageMenus1"
                        android:layout_height="@dimen/_28pxh"
                        android:layout_width="@dimen/_28pxh"
                        android:scaleType="fitXY" android:src="@drawable/img_menus1"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtPerfil"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginStart="@dimen/_24pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_weight="0.65"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{configuraciNVM.configuraciNModel.txtPerfil}"
                        style="@style/txtRobotoromanmedium22" tools:text="@string/lbl_perfil"/>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearGroup13"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_A700">
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearGroup143"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_37pxv"
                android:layout_width="match_parent" android:orientation="vertical">
                <LinearLayout android:id="@+id/linearGroup142"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtUser"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_30pxh"
                        android:layout_marginTop="@dimen/_19pxv"
                        android:layout_weight="0.49"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{configuraciNVM.configuraciNModel.txtUser}"
                        style="@style/txtRobotoromanmedium18" tools:text="@string/lbl_user"/>
                    <ImageView android:id="@+id/imageIcons8edit64"
                        android:layout_height="@dimen/_40pxh"
                        android:layout_marginEnd="@dimen/_30pxh"
                        android:layout_marginStart="@dimen/_222pxh"
                        android:layout_width="@dimen/_40pxh"
                        android:scaleType="fitXY" android:src="@drawable/img_icons8edit64"/>
                </LinearLayout>
                <View android:background="@color/gray_400"
                    android:id="@+id/lineLine1"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_1pxv"
                    android:layout_marginEnd="@dimen/_30pxh"
                    android:layout_marginStart="@dimen/_30pxh"
                    android:layout_marginTop="@dimen/_25pxv" android:layout_width="@dimen/_300pxh"/>
            </LinearLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txtTuInformacin"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_30pxh"
                android:layout_marginStart="@dimen/_30pxh"
                android:layout_marginTop="@dimen/_25pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{configuraciNVM.configuraciNModel.txtTuInformacin}"
                style="@style/txtRobotoromanmedium18" tools:text="@string/lbl_tu_informaci_n"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearInfo"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_30pxh"
                android:layout_marginStart="@dimen/_30pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtEmail"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.21"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{configuraciNVM.configuraciNModel.txtEmail}"
                    style="@style/txtRobotoromanmedium14_1" tools:text="@string/lbl_email"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtCorreohotmail"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_102pxh"
                    android:layout_weight="0.79"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{configuraciNVM.configuraciNModel.txtCorreohotmail}"
                    style="@style/txtRobotoromanregular14_1" tools:text="@string/msg_correo_hotmail"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearInfo1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_30pxh"
                android:layout_marginStart="@dimen/_30pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtContrasea"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.57"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{configuraciNVM.configuraciNModel.txtContrasea}"
                    style="@style/txtRobotoromanmedium14_1" tools:text="@string/lbl_contrase_a"/>
                <TextView android:ellipsize="end" android:id="@+id/txt"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_65pxh"
                    android:layout_weight="0.43"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{configuraciNVM.configuraciNModel.txt}"
                    style="@style/txtRobotoromanregular14_1" tools:text="@string/lbl"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearInfo2"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_30pxh"
                android:layout_marginStart="@dimen/_30pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPesoActual"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.66"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{configuraciNVM.configuraciNModel.txtPesoActual}"
                    style="@style/txtRobotoromanmedium14_1" tools:text="@string/lbl_peso_actual"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txt70Kg"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_63pxh"
                    android:layout_weight="0.34"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{configuraciNVM.configuraciNModel.txt70Kg}"
                    style="@style/txtRobotoromanregular14_1" tools:text="@string/lbl_70_kg"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearInfo3"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_30pxh"
                android:layout_marginStart="@dimen/_30pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPesoObjetivo"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.69"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{configuraciNVM.configuraciNModel.txtPesoObjetivo}"
                    style="@style/txtRobotoromanmedium14_1" tools:text="@string/lbl_peso_objetivo"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txt60Kg"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_52pxh"
                    android:layout_weight="0.31"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{configuraciNVM.configuraciNModel.txt60Kg}"
                    style="@style/txtRobotoromanregular14_1" tools:text="@string/lbl_60_kg"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearInfo4"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_30pxh"
                android:layout_marginStart="@dimen/_30pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtCalorasActual"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.64"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{configuraciNVM.configuraciNModel.txtCalorasActual}"
                    style="@style/txtRobotoromanmedium14_1" tools:text="@string/msg_calor_as_actual"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txt2339Kcal"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_28pxh"
                    android:layout_weight="0.36"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{configuraciNVM.configuraciNModel.txt2339Kcal}"
                    style="@style/txtRobotoromanregular14_1" tools:text="@string/lbl_2339_kcal2"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearInfo5"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_30pxh"
                android:layout_marginStart="@dimen/_30pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtCalorasObjeti"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.63"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{configuraciNVM.configuraciNModel.txtCalorasObjeti}"
                    style="@style/txtRobotoromanmedium14_1" tools:text="@string/msg_calor_as_objeti"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txt1919Kcal"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_32pxh"
                    android:layout_weight="0.37"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{configuraciNVM.configuraciNModel.txt1919Kcal}"
                    style="@style/txtRobotoromanregular14_1" tools:text="@string/lbl_1919_kcal"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearInfo6"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_30pxh"
                android:layout_marginStart="@dimen/_30pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtSexo"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.38"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{configuraciNVM.configuraciNModel.txtSexo}"
                    style="@style/txtRobotoromanmedium14_1" tools:text="@string/lbl_sexo"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtHombre"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_106pxh"
                    android:layout_weight="0.62"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{configuraciNVM.configuraciNModel.txtHombre}"
                    style="@style/txtRobotoromanregular14_1" tools:text="@string/lbl_hombre"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearInfo7"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_30pxh"
                android:layout_marginStart="@dimen/_30pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtObjetivo"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.38"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{configuraciNVM.configuraciNModel.txtObjetivo}"
                    style="@style/txtRobotoromanmedium14_1" tools:text="@string/lbl_objetivo"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtBajarDePeso"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_85pxh"
                    android:layout_weight="0.62"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{configuraciNVM.configuraciNModel.txtBajarDePeso}"
                    style="@style/txtRobotoromanregular14_1" tools:text="@string/lbl_bajar_de_peso"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnRegresar"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_50pxv"
                android:layout_marginBottom="@dimen/_20pxv"
                android:layout_marginEnd="@dimen/_30pxh"
                android:layout_marginStart="@dimen/_30pxh"
                android:layout_marginTop="@dimen/_57pxv"
                android:layout_width="@dimen/_150pxh"
                android:paddingBottom="@dimen/_15pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_15pxv"
                android:singleLine="true"
                android:text="@string/lbl_regresar"
                android:textAllCaps="false"
                style="@style/btnSolidRounded" tools:text="@string/lbl_regresar"/>
        </LinearLayout>
    </LinearLayout>
</layout>
