<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="loginVM" type="com.application.app.modules.login.data.viewmodel.LoginVM"/>
    </data>
    <LinearLayout android:gravity="start" android:id="@+id/linearLogin"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <TextView android:id="@+id/txtIniciarSesin"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_20pxv"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_20pxv"
            android:text="@{loginVM.loginModel.txtIniciarSesin}"
            style="@style/txtSolid" tools:text="@string/lbl_iniciar_sesi_n"/>
        <LinearLayout android:id="@+id/linearGroup27"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_A700">
            <ImageView android:gravity="start"
                android:id="@+id/imageGruponinosgra"
                android:layout_height="@dimen/_180pxh"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_gruponinosgra}" tools:src="@drawable/img_gruponinosgra"/>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtBienvenidoDe"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_30pxh"
                android:layout_marginStart="@dimen/_30pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{loginVM.loginModel.txtBienvenidoDe}"
                style="@style/txtRobotoromanmedium24" tools:text="@string/msg_bienvenido_de"/>
            <EditText android:ellipsize="end"
                android:hint="@string/lbl_email"
                android:id="@+id/etEmail"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_30pxh"
                android:layout_marginStart="@dimen/_30pxh"
                android:layout_marginTop="@dimen/_40pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_6pxv"
                android:paddingTop="@dimen/_1pxv"
                android:singleLine="true"
                android:text="@={loginVM.loginModel.etEmailValue}"
                android:textColorHint="@color/gray_500" style="@style/etRobotoromanmedium14"/>
            <EditText android:ellipsize="end"
                android:hint="@string/lbl_contrase_a"
                android:id="@+id/etContrasea"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_30pxh"
                android:layout_marginStart="@dimen/_30pxh"
                android:layout_marginTop="@dimen/_30pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_6pxv"
                android:paddingTop="@dimen/_1pxv"
                android:singleLine="true"
                android:text="@={loginVM.loginModel.etContraseaValue}"
                android:textColorHint="@color/gray_500" style="@style/etRobotoromanmedium14"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtOlvidMiContr"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_30pxh"
                android:layout_marginStart="@dimen/_30pxh"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{loginVM.loginModel.txtOlvidMiContr}"
                style="@style/txtRobotoromansemibold13" tools:text="@string/msg_olvid_mi_contr"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnIngresar"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_50pxv"
                android:layout_marginEnd="@dimen/_30pxh"
                android:layout_marginStart="@dimen/_30pxh"
                android:layout_marginTop="@dimen/_86pxv"
                android:layout_width="@dimen/_150pxh"
                android:paddingBottom="@dimen/_15pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_15pxv"
                android:singleLine="true"
                android:text="@string/lbl_ingresar"
                android:textAllCaps="false"
                style="@style/btnSolidRounded" tools:text="@string/lbl_ingresar"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtNoTienesCuen"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20pxv"
                android:layout_marginEnd="@dimen/_30pxh"
                android:layout_marginStart="@dimen/_30pxh"
                android:layout_marginTop="@dimen/_25pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{loginVM.loginModel.txtNoTienesCuen}"
                style="@style/txtRobotoromanmedium13" tools:text="@string/msg_no_tienes_cuen"/>
        </LinearLayout>
    </LinearLayout>
</layout>
